--- a/index.html
+++ b/index.html
@@ -3,55 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Student Resume</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <div class="contain">
-        <div class="main">
-            
-            <div class="topbar">
-                <a href="">Logout</a>
-                <a href="">Support</a>
-                <a href="">Work</a>
-                <a href="">Home</a>
-            </div>
-            <div class="row">
-                <div class="col-mid-3 mt-1">
-                    <div class="card text-center sidebar">
-                        <div class="card-body">
-                            <img src="istockphoto-1393750072-612x612.jpg" class="rounded-circle" width="150">
-                            <div class="mt-2">
-                                <h3>Sumaiya Khatun</h3>
-                                 <p>Tangail,Dhaka</p>
-                                <p>Student at University of Rajshahi</p>
-                                <p>missumaiya@gmail.com</p>
-                            </div>
-                        </div>
+    <div class="resume-container">
+        <header class="resume-header">
+            <div class="left-block">
+                <img src="istockphoto-1393750072-612x612.jpg" alt="Applicant's Image" class="profile-image">
+                <div class="contact-info">
+                    <div class="contact-box">
                     </div>
-                  </div>
-               </div>
-              </div>  
-              <div class="about me">
-                <h2>About Me</h2>
-                <p>Hi! I am Sumaiya Khatun,currently I am pursuing my study in department of computer science and engineering.Currently I am in second year and second semester at my university. I am passionate about web development and technology. I enjoy learning new things and enhancing my skills. I am also interested in volunteering and contributing to various social causes.</p>
-                <h2>Skills</h2>
-                <ol>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>C</li>
-                    <li>C++</li>
-                    <li>JAVA</li>
-                </ol>
-                <h2>Hobbies</h2>
-                <ul>
-                    <li>Traveling</li>
-                    <li>Listening Song</li>
-                    <li>Reading Books</li>
-                </ul>
-              </div>
+                    <ul>
+                        <li>Tangail, Dhaka</li>
+                        <li>Email: missumaiya@gmail.com</li>
+                        <li>Phone: 0134567890</li>
+                    </ul>
+                </div>
             </div>
-        </div>
+
+            <div class="right-block">
+                <div class="education">
+                    <div class="section-box">
+                        <h4>Education</h4>
+                    </div>
+                    <ul>
+                        <li>Present student at University of Rajshahi</li>
+                        <li>Degree/Course: Higher Secondary School Certificate</li>
+                        <li>Institution: Kalihati Shajahan Siraj College</li>
+                        <li>Degree/Course: Secondary School Certificate</li>
+                        <li>Institution: Kadamtali Hasan Public High School</li>
+                    </ul>
+                </div>
+
+                <div class="objective">
+                    <div class="section-box">
+                        <h4>Objective</h4>
+                    </div>
+                    <p>As a passionate and driven Computer Science and Engineering (CSE) student at the University of Rajshahi, I aim to leverage my knowledge in programming, software development, and problem-solving to contribute to innovative technology solutions. Eager to apply theoretical learning into real-world projects, I seek opportunities to gain hands-on experience in the field of software engineering, web development, and data science. I am committed to continuous learning and growth, with the goal of becoming a proficient software developer and making a meaningful impact in the tech industry.</p>
+                </div>
+
+                <div class="skills">
+                    <div class="section-box">
+                        <h4>Skills</h4>
+                    </div>
+                    <ul>
+                        <li>HTML, CSS</li>
+                        <li>C, C++</li>
+                        <li>Java</li>
+                        <li>Git, GitHub</li>
+                    </ul>
+                </div>
+
+                <div class="hobbies">
+                    <div class="section-box">
+                        <h4>Hobbies</h4>
+                    </div>
+                    <ul>
+                        <li>Traveling</li>
+                        <li>Listening to Songs</li>
+                        <li>Reading Books</li>
+                    </ul>
+                </div>
+            </div>
+        </header>
     </div>
 </body>
 </html>
